# PersonalParakeet

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_INVENTORY.json  COVERAGE_EXPLANATION.md  CURRENT_STATUS.md  Cargo.toml  DICTATION_VIEW_SETUP_GUIDE.md  Dockerfile  ESSENTIAL_Audio_Integration.py  ESSENTIAL_FILES_README.md  ESSENTIAL_LocalAgreement_Code.py  ESSENTIAL_RTX_Config.py  FIX_DEPENDENCIES_NOW.md  GIT_SETUP.md  IMPLEMENTATION_ROADMAP.md  Kimi.md  PERSONALPARAKEET_TECHNICAL_EVALUATION_2025-08-03.md  PROJECT_FEATURES_SUMMARY.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_RESET_PLAN.md  PYTHON_311_MIGRATION_PLAN.md  PersonalParakeet_v2_Architectural_Brief.md  QUICK_FIX_INSTRUCTIONS.md  README.md  SCOPE_CREEP_LESSONS.md  SETUP.md  SETUP_ML.md  TESTING_CHECKLIST.md  TESTING_INFRASTRUCTURE_FIX_PROMPT.md  TEST_GAP_ANALYSIS.md  V3_REORGANIZATION_RESULTS.md  WORKSHOP_BOX_SETUP_GUIDE.md  audio_engine_analysis.md  check_dependencies.py  check_venv.py  cleanup_project_structure.py  command_mode_test_results.json  config.yaml  (+80 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.kilocode/: mcp.json
.serena/: project.yml
.swarm/: memory.db
archive/: turn1.md  turn2.md  turn4.md  turn5_review.md  turn6_fixes_implemented.md
archive/dictation-view-ui/src-tauri/: Cargo.toml  tauri.conf.json
archive/dictation-view-ui/src-tauri/src/: main.rs
dictation-view-ui/: index.html  package-lock.json
docs/: ARCHITECTURE.md  AUDIO_MONITORING.md  AUGUST03StructureRefactor_REVISED.md  Architecture_Decision_Record_Flet.md  CURRENT_STATUS.md  Clarity_Engine_Technical_Spec.md  DEVELOPMENT.md  DICTATION_VIEW_SETUP_GUIDE.md  ENHANCED_INJECTION_IMPLEMENTATION.md  ENHANCEMENTS_SUMMARY.md  FAILURE_PATTERNS_AND_LESSONS_LEARNED.md  Flet_Refactor_Implementation_Plan.md  GEMINI_REORGANIZATION_PLAN.md  GUI_FEATURE_PLANNING.md  KNOWLEDGE_BASE.md  Modern_UI_Framework_Analysis.md  PersonalParakeet_v2_Architectural_Brief.md  QUICKSTART.md  RTX 5090 CUDA Compatibility Solutions_.md  SCOPE_CREEP_LESSONS.md  STATUS.md  TECHNICAL_REFERENCE.md  TESTING_FRAMEWORK_PLAN.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_MAIN_APPLICATION.md  TEST_VISUALIZATION.md  TEST_VISUALIZATION_USAGE.md  Tauri_Capabilities_Showcase.md  V1_to_V2_Integration_Plan.md  V3_FEATURE_MIGRATION_STATUS.md  V3_PROVEN_CODE_LIBRARY.md  VIRTUAL_KEYBOARD_PROTOCOL_IMPLEMENTATION.md  VIRTUAL_KEYBOARD_PROTOCOL_TASK.md  Voice_Activity_Detection_Implementation_Plan.md  WAYLAND_IMPLEMENTATION_SUMMARY.md  WAYLAND_INJECTION_RESEARCH.md  WORKSHOP_BOX_CRASH_FIXES.md  WORKSHOP_BOX_TROUBLESHOOTING.md  Workshop_Box_Adaptive_Sizing_Spec.md  (+7 more)
package_complete_documents/: CHANGES_MADE.md  Instructions.md  README.md  SYSTEM_OVERVIEW.md  code_style_conventions.md  llm_refinement_examples.md  project_overview.md  project_status_todo_list.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  test_plan.md  virtual_environment_management.md
personalparakeet/: __init__.py  __main__.py  application_detection.py  application_detection_enhanced.py  audio_devices.py  basic_injection.py  clarity_engine.py  clipboard_manager.py  command_mode.py  config.py  config_manager.py  constants.py  cuda_fix.py  dictation.py  kde_injection.py  linux_clipboard_manager.py  linux_injection.py  local_agreement.py  logger.py  text_injection.py  text_injection_enhanced.py  thought_linking.py  vad_engine.py  windows_clipboard_manager.py  windows_injection.py  windows_injection_improved.py
scripts/: activate.sh  analyze_imports.py  check_dependencies.py  clean_install_ml.sh  cleanup_test_reports.py  config_tool.py  fix_ml_dependencies.sh  fix_nemo_install.sh  fix_pytorch_cuda.bat  fix_rtx5090_pytorch.bat  import_analysis.json  run_background.py  setup_wayland_injection.sh  test_visualization_dashboard.py  validate_environment.py  validate_environment.sh
src/: events.rs  gui.rs  lib.rs
tasks/: agent_a_findings.md  debugging_plan_20250804.md
tempreview/: design.md  requirements.md  tasks.md
test_audit/: coverage_analyzer.py  execute_audit.py  kill_list_ranker.py  migration_validator.py  redundancy_engine.py  reporting_dashboard.py  runtime_profiler.py
tests/: README.md  __init__.py  config.yaml  (+30 more)
v3-flet/: README.md  activate.sh  audio_engine.py  check_audio_deps.py  cleanup_processes.py  config.json  config.py  debug_detector.py  environment.yml  fix_async_handlers.py  install.bat  install.sh  install_nemo.py  main.py  ml_stack_check.py  pyproject.toml  pytest.ini  quick_injection_test.py  quick_live_test.py  quick_test.py  requirements-v3.txt  run_tests.py  setup.sh  test_app_creation.py  test_application_detection.py  test_audio_headless.py  test_config_profiles.py  test_detection_simple.py  test_hybrid_install.py  test_live_audio.py  test_microphone.py  test_results_20250721_101351.json  test_stt_integration.py  test_ui_basic.py  test_ui_headless.py  verify_status.py
v3-flet/assets/: README.md
v3-flet/core/: __init__.py  application_detector.py  clarity_engine.py  command_processor.py  cuda_compatibility.py  enhanced_injection_strategies.py  injection_manager.py  injection_manager_enhanced.py  stt_processor.py  stt_processor_mock.py  text_injector.py  thought_linker.py  thought_linking_integration.py  vad_engine.py
v3-flet/docs/: ML_INSTALLATION_GUIDE.md  THOUGHT_LINKING_INTEGRATION.md
v3-flet/reports/: SUMMARY_REPORT.md  audio_engine.py.md  clarity_engine.py.md  config.py.md  dictation_view.py.md  injection_manager_enhanced.py.md  main.py.md  stt_processor.py.md
v3-flet/tests/: MOCK_TEST_EXPLANATION.md  README.md  __init__.py  test_audio_engine.py  test_command_processor.py  test_components.py  test_gui_launch.py  test_integration.py
v3-flet/tests/test_core/: test_stt_processor.py  test_stt_processor_real.py  test_vad_engine.py  test_vad_engine_real.py
v3-flet/tests/test_integration/: test_audio_pipeline.py
v3-flet/tests/utilities/: test_detector.py  test_enhanced_injection.py  test_full_pipeline.py  test_injection.py
v3-flet/ui/: __init__.py  components.py  dictation_view.py  theme.py
(+324 files in other folders)
