[package]
name = "personalparakeet-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "personalparakeet_ui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"] }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["glow"] }
crossbeam-channel = "0.5"
tokio = { version = "1.40", features = ["full"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.25"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
